add lombok pom